modify get students